<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="oneClickSwitch"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Switch
        android:id="@+id/switchView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/tac" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" >

        <RadioButton
            android:id="@+id/op1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op1" />

        <RadioButton
            android:id="@+id/op2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/op2" />

        <RadioButton
            android:id="@+id/op3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/op3" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/texto" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="18dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switchView1"
        android:layout_alignRight="@+id/switchView1"
        android:layout_below="@+id/seekBar1"
        android:layout_marginTop="30dp"
        android:onClick="onSubmitForm"
        android:text="@string/submit" />

</RelativeLayout>

